Enable serverless function and API email sending with environment variables

--- a/vercel.json
+++ b/vercel.json
@@ -12,9 +12,17 @@
     {
       "src": "*.js",
       "use": "@vercel/static"
+    },
+    {
+      "src": "server.js",
+      "use": "@vercel/node"
     }
   ],
   "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "/server.js"
+    },
     {
       "src": "/",
       "dest": "/index.html"
@@ -23,5 +31,10 @@
       "src": "/(.*)",
       "dest": "/$1"
     }
-  ]
+  ],
+  "functions": {
+    "server.js": {
+      "maxDuration": 10
+    }
+  }
 } 
